--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
+body {
+	background-image: url(../images/fond.jpg);
+	background-size: cover;
+}
+
 ul {
 	display: flex;
 	justify-content: center;
+	margin-top: 10rem;
 }
 
 li {
@@ -15,8 +21,11 @@ ul button {
 	margin-top: 5rem;
 	margin-bottom: 5rem;
 	border: none;
+	background : none;
 }
 
 img {
 	width: 25rem;
+	border-radius: 2rem;
+	border: solid #feeb7b .4rem;
 }
